[package]
name = "gtk-window"
version = "0.1.0"
authors = ["gdepuydt1983 <geert.depuydt@ontoforce.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.gtk]
version = "0.7.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

